fix 'thick link underlines on safari' issue

--- a/src/scss/site/shared/typography.scss
+++ b/src/scss/site/shared/typography.scss
@@ -113,6 +113,7 @@ p {
 */
 a {
     color: var(--primary);
+    text-decoration-thickness: from-font;
 
     .intro & {
         color: var(--intro-text);
